--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
 	<title>Street Fighter Hangman</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -24,7 +25,7 @@
   					<h3>Wins</h3>
   						<p></p>
   					<h3>Current Word</h3>
-  						<p></p>
+  						<p id="currentwordP"></p>
   					<h3>Tries remaining</h3>
   						<p></p>
   					<h3>Letters Already Guessed</h3>
