initial save files

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   					<h3>Wins</h3>
   						<p></p>
   					<h3>Current Word</h3>
-  						<p id="currentwordP"></p>
+  						<p id="currentwordP" class="currentWordcs"></p>
   					<h3>Tries remaining</h3>
   						<p></p>
   					<h3>Letters Already Guessed</h3>
