initial save files

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   					<h3>Tries remaining</h3>
   						<p></p>
   					<h3>Letters Already Guessed</h3>
-  						<p></p>
+  						<p id="guessed"></p>
   				</aside>
 		</content>
 	</div>
