initial save files

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   					<h3>Current Word</h3>
   						<p id="currentwordP" class="currentWordcs"></p>
   					<h3>Tries remaining</h3>
-  						<p></p>
+  						<p id="tries">6</p>
   					<h3>Letters Already Guessed</h3>
   						<p id="guessed"></p>
   				</aside>
