initial save files

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   				<aside class="col-md-6">
   					<h2>Press Any Key to Start</h2>
   					<h3>Wins</h3>
-  						<p></p>
+  						<p id="wins">0</p>
   					<h3>Current Word</h3>
   						<p id="currentwordP" class="currentWordcs"></p>
   					<h3>Tries remaining</h3>
